# hpsengine

./: CMakeLists.txt  bootstrap_linux.sh  bootstrap_linux_cicd.sh  bootstrap_macos.sh  bootstrapdebug_macos.sh  bootstrapdebug_win32.bat  conanfile.txt  debugprofile_linux.txt  debugprofile_macos.txt  debugprofile_win32.txt  linux_run_valgrind.sh  main.cpp
.github/workflows/: cmake-single-platform.yml
docs/: Doxyfile
docs/html/: _bounding_box_8cpp.html  _bounding_box_8h.html  _bounding_box_8h.js  _bounding_box_8h_source.html  _circle_component_8cpp.html  _circle_component_8h.html  _circle_component_8h.js  _circle_component_8h_source.html  _colors_8h.html  _colors_8h_source.html  _game_object_8cpp.html  _game_object_8h.html  _game_object_8h.js  _game_object_8h_source.html  _i_component_8h.html  _i_component_8h.js  _i_component_8h_source.html  _i_entity_8h.html  _i_entity_8h.js  _i_entity_8h_source.html  _i_renderable_8h.html  _i_renderable_8h.js  _i_renderable_8h_source.html  _i_renderer_8h.html  _i_renderer_8h.js  _i_renderer_8h_source.html  _i_scene_entity_8h.html  _i_scene_entity_8h.js  _i_scene_entity_8h_source.html  _i_texture_load_strategy_8h.html  _i_texture_load_strategy_8h.js  _i_texture_load_strategy_8h_source.html  _i_texture_manager_8h.html  _i_texture_manager_8h.js  _i_texture_manager_8h_source.html  _i_updatable_8h.html  _i_updatable_8h.js  _i_updatable_8h_source.html  _load_b_m_p_8cpp.html  _load_b_m_p_8h.html  (+402 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+38 more)
docs/latex/: _bounding_box_8cpp.tex  _bounding_box_8h.tex  _bounding_box_8h_source.tex  _circle_component_8cpp.tex  _circle_component_8h.tex  _circle_component_8h_source.tex  _colors_8h.tex  _colors_8h_source.tex  _game_object_8cpp.tex  _game_object_8h.tex  _game_object_8h_source.tex  _i_component_8h.tex  _i_component_8h_source.tex  _i_entity_8h.tex  _i_entity_8h_source.tex  _i_renderable_8h.tex  _i_renderable_8h_source.tex  _i_renderer_8h.tex  _i_renderer_8h_source.tex  _i_scene_entity_8h.tex  _i_scene_entity_8h_source.tex  _i_texture_load_strategy_8h.tex  _i_texture_load_strategy_8h_source.tex  _i_texture_manager_8h.tex  _i_texture_manager_8h_source.tex  _i_updatable_8h.tex  _i_updatable_8h_source.tex  _load_b_m_p_8cpp.tex  _load_b_m_p_8h.tex  _load_b_m_p_8h_source.tex  _load_p_n_g_8cpp.tex  _load_p_n_g_8h.tex  _load_p_n_g_8h_source.tex  _rectangle_8h.tex  _rectangle_8h_source.tex  _rectangle_component_8cpp.tex  _rectangle_component_8h.tex  _rectangle_component_8h_source.tex  _renderable_component_8cpp.tex  _renderable_component_8h.tex  (+165 more)
src/primitives/: Circle.cpp  Circle.h  Colors.h  Rectangle.cpp  Rectangle.h
src/sdlcore/: IRenderable.h  IRenderer.h  ITextureManager.h  IUpdatable.h  Rectangle.h  RenderingQueue.cpp  RenderingQueue.h  SDLAnimatedSpriteSheet.cpp  SDLAnimatedSpriteSheet.h  SDLCore.cpp  SDLCore.h  SDLEngine.h  SDLEventHandler.cpp  SDLEventHandler.h  SDLGame.cpp  SDLGame.h  SDLRenderer.cpp  SDLRenderer.h  SDLTexture.cpp  SDLTexture.h  SDLTimeController.cpp  SDLTimeController.h  SDLWindow.cpp  SDLWindow.h
src/sdlcore/Actors/: TestActor.cpp  TestActor.h
src/sdlcore/Components/: ComponentsMapper.cpp  ComponentsMapper.h  IComponent.h  RenderableComponent.cpp  RenderableComponent.h  SpriteComponent.cpp  SpriteComponent.h  SpritesheetComponent.cpp  SpritesheetComponent.h
src/sdlcore/Components/debug/: BoundingBox.cpp  BoundingBox.h
src/sdlcore/Components/primitives/: CircleComponent.cpp  CircleComponent.h  RectangleComponent.cpp  RectangleComponent.h
src/sdlcore/Entity/: IEntity.h  ISceneEntity.h
src/sdlcore/GameObject/: GameObject.cpp  GameObject.h
src/sdlcore/Input/: IInputDevice.h  IInputManager.h  SDLGamepad.cpp  SDLGamepad.h  SDLInputManager.cpp  SDLInputManager.h  SDLKeyboard.cpp  SDLKeyboard.h  SDLMouse.cpp  SDLMouse.h
src/sdlcore/Math/: Rectangle.h  Vector2D.h
src/sdlcore/Scene/: Scene.cpp  Scene.h
src/sdlcore/Texture/: ITextureLoadStrategy.h  ITextureManager.h  LoadBMP.cpp  LoadBMP.h  LoadPNG.cpp  LoadPNG.h  TextureLoadStrategyFactory.h  TextureManager.cpp  TextureManager.h
